--- a/assets/sass/_00-grid.sass
+++ b/assets/sass/_00-grid.sass
@@ -94,8 +94,6 @@
   display: grid
   grid-template-columns: repeat(12, 1fr)
   grid-gap: 2rem
-  padding-left: 3rem
-  padding-right: 3rem
 
   &.full-width
     padding-left: 0
