--- a/assets/sass/_03-site.sass
+++ b/assets/sass/_03-site.sass
@@ -30,3 +30,5 @@ img
     max-width: 1360px
     margin-left: auto
     margin-right: auto
+    padding-left: 3rem
+    padding-right: 3rem
